--- a/_config-local.yml
+++ b/_config-local.yml
@@ -1,1 +1,1 @@
-url: "http://127.0.0.1:4000/LD33" # the base hostname & protocol when serving locally
+url: "http://127.0.0.1:4000" # the base hostname & protocol when serving locally
